fix: membership duplication related to primary owners (#4995)
The PO membership of the source API is duplicated, and we changed the role to use the default one.
The user's membership triggering the duplication is not duplicated because it already has primary ownership.

https://gravitee.atlassian.net/browse/APIM-2525
(cherry picked from commit b01bf440ec4e0906073ad43f42c41b994c50c47e)